# helloqt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/app/: CMakeLists.txt  main.cpp
